@@ -121,3 +121,4 @@ DebuggingCContext.name=Debugging C/C++
 DebuggingCContext.description=Debugging C/C++ Programs
 
 CommonBreakpointPage.label=Common
+FilteringBreakpointPage.label=Filtering
