@@ -29,3 +29,4 @@ CBreakpointPropertyPage.16=Invalid condition.
 CBreakpointPropertyPage.17=&Ignore count: 
 CBreakpointPropertyPage.18=Type:
 CBreakpointPropertyPage.19=Enabled
+ThreadFilterEditor.0=&Restrict to Selected Thread(s):
